Remove deprecated branches